# QuixiCore-XPU

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.quixicore/: backend.yaml  kernels.yaml  quant-formats.yaml
bindings/pytorch/: README.md  build.sh  setup.py  test_parity.py  tk_xpu_ext.sycl
cmake/: QuixiCoreXPUConfig.cmake.in
docs/: backend-notes.md  development.md  kernel-roadmap.md  performance.md  qwen-serving-port.md  repository-structure.md
examples/: backend_info.cpp  sycl_device_probe.cpp
include/quixicore/xpu/: backend.hpp  graph.hpp  ops.hpp  runtime.hpp  variants.hpp
kernels/activations/gelu/: gelu_kernel.hpp
kernels/activations/gelu/variants/xpu_onednn/: gelu.onednn.cpp
kernels/activations/gelu/variants/xpu_sycl/: gelu.sycl.cpp
kernels/activations/gelu_backward/: gelu_backward_kernel.hpp
kernels/activations/gelu_backward/variants/xpu_sycl/: gelu_backward.sycl.cpp
kernels/activations/glu/: glu_kernel.hpp
kernels/activations/glu/variants/xpu_sycl/: glu.sycl.cpp
kernels/activations/silu/: silu_kernel.hpp
kernels/activations/silu/variants/xpu_sycl/: silu.sycl.cpp
kernels/activations/softmax/: softmax_kernel.hpp
kernels/activations/softmax/variants/xpu_onednn/: softmax.onednn.cpp
kernels/activations/softmax/variants/xpu_sycl/: softmax.sycl.cpp
kernels/attention/attention/: attention_kernel.hpp
kernels/attention/attention/variants/xpu_sycl/: attention.sycl.cpp  attention_f16ctx.sycl.cpp  attn_swa.sycl.cpp
kernels/attention/qk_norm_rope/: qk_norm_rope_kernel.hpp
kernels/attention/qk_norm_rope/variants/xpu_sycl/: qk_norm_rope.sycl.cpp
kernels/attention/rope/: rope_kernel.hpp
kernels/attention/rope/variants/xpu_sycl/: rope.sycl.cpp
kernels/common/: rng.hpp  vec_map.hpp
kernels/linear_attention/linear_attn/: linear_attn_kernel.hpp
kernels/linear_attention/linear_attn/variants/xpu_sycl/: linear_attn.sycl.cpp
kernels/linear_attention/qwen_gdn_decode/: qwen_gdn_kernel.hpp
kernels/linear_attention/qwen_gdn_decode/variants/xpu_sycl/: qwen_gdn.sycl.cpp
kernels/matmul/dense_gemm/: dense_gemm_kernel.hpp
kernels/matmul/dense_gemm/variants/xpu_onednn/: dense_gemm.onednn.cpp
kernels/matmul/dense_gemm/variants/xpu_sycl/: dense_gemm.sycl.cpp
kernels/moe/moe_route/: moe_route_kernel.hpp
kernels/moe/moe_route/variants/xpu_sycl/: moe_route.sycl.cpp
kernels/moe/nvfp4_moe/: nvfp4_moe_kernel.hpp
kernels/moe/nvfp4_moe/variants/xpu_sycl/: nvfp4_moe.sycl.cpp
kernels/norms/: norms_kernel.hpp
kernels/norms/layernorm/variants/xpu_onednn/: layernorm.onednn.cpp
kernels/norms/layernorm/variants/xpu_sycl/: layernorm.sycl.cpp
kernels/norms/rms_norm/variants/xpu_sycl/: rms_norm.sycl.cpp
kernels/optimizers/adamw/: adamw_kernel.hpp
kernels/optimizers/adamw/variants/xpu_sycl/: adamw.sycl.cpp
kernels/quantization/act_quant/: act_quant_kernel.hpp
kernels/quantization/act_quant/variants/xpu_sycl/: act_quant.sycl.cpp
kernels/quantization/fp8_gemm/: fp8_kernel.hpp
kernels/quantization/fp8_gemm/variants/xpu_onednn/: fp8_gemm.onednn.cpp
kernels/quantization/fp8_gemm/variants/xpu_sycl/: fp8_gemv.sycl.cpp  fp8_w8a16.sycl.cpp
kernels/quantization/gguf_gemv/: gguf_iq_tables.hpp  gguf_kernel.hpp
kernels/quantization/gguf_gemv/variants/xpu_sycl/: gguf_gemv.sycl.cpp
kernels/quantization/mxfp4_gemv/: mxfp4_kernel.hpp
kernels/quantization/mxfp4_gemv/variants/xpu_sycl/: mxfp4_gemv.sycl.cpp
kernels/quantization/nvfp4_gemv/: nvfp4_kernel.hpp
kernels/quantization/nvfp4_gemv/variants/xpu_sycl/: nvfp4_gemv.sycl.cpp
kernels/quantization/qgemm/: qgemm_kernel.hpp
kernels/quantization/qgemm/variants/xpu_onednn/: qgemm.onednn.cpp
kernels/quantization/qgemm/variants/xpu_sycl/: qgemm.sycl.cpp
kernels/quantization/qgemv/: qgemv_kernel.hpp
kernels/quantization/qgemv/variants/xpu_sycl/: qgemv.sycl.cpp
kernels/quantization/quantize/: quantize_kernel.hpp
kernels/quantization/quantize/variants/xpu_sycl/: quantize.sycl.cpp
kernels/quantization/w4a16_gemm/: w4a16_gemm_kernel.hpp
kernels/quantization/w4a16_gemm/variants/xpu_sycl/: w4a16_gemm.sycl.cpp
kernels/sampling/argmax/: argmax_kernel.hpp
kernels/sampling/argmax/variants/xpu_sycl/: argmax.sycl.cpp
kernels/sampling/sample/: sample_kernel.hpp
kernels/sampling/sample/variants/xpu_sycl/: sample.sycl.cpp
kernels/serving/: serving_kernel.hpp
kernels/serving/variants/xpu_sycl/: serving.sycl.cpp
kernels/ssm/selective_scan/: selective_scan_kernel.hpp
kernels/ssm/selective_scan/variants/xpu_sycl/: selective_scan.sycl.cpp
kernels/utils/: utils_kernel.hpp
kernels/utils/cross_entropy/variants/xpu_sycl/: cross_entropy.sycl.cpp
kernels/utils/dropout/variants/xpu_sycl/: dropout.sycl.cpp
kernels/utils/hadamard/variants/xpu_sycl/: hadamard.sycl.cpp
perf/: README.md  baseline_status.md  bench_kernels.py  optimization_status.md  perf.md
perf/configs/: activations_gelu.yaml  activations_softmax.yaml  norms_layernorm.yaml  norms_rms_norm.yaml  serving_qwen_decode.yaml
perf/harness/: xpu_bench.cpp
scripts/: bench  build  clean  configure  coverage-report  test
src/: backend.cpp
src/dispatch/: activations.cpp  attention.cpp  collectives.cpp  linear_attention.cpp  matmul.cpp  moe.cpp  norms.cpp  optimizers.cpp  quantization.cpp  sampling.cpp  serving.cpp  ssm.cpp  utils.cpp  variants.cpp
src/runtime/: graph.cpp  runtime.cpp
tests/: README.md  backend_smoke.cpp  xpu_graph_smoke.cpp  xpu_ops_smoke.cpp
